--- a/src/styles.sass
+++ b/src/styles.sass
@@ -55,6 +55,11 @@ header .logo h2
         padding: 5px
         border-radius: 5px
         margin: 5px
+    & .matchs
+        color: gray
+        align-self: center
+        font-style: italic
+
 #ingredients-btn,
 .ingredients-result-btn
     background-color: #3282f7
@@ -150,6 +155,20 @@ header .logo h2
         font-family: 'Lato', sans-serif
         font-size: 14px
         padding: 0 10px
+
+#nomatch
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    padding: 20px
+    img
+        padding: 20px
+        width: 50%
+        max-width: 250px
+        fill: gray
+    p
+        color: gray
 
 #selected-filter
     padding: 10px 100px
