Agregados comentarios al codigo

--- a/src/styles.css
+++ b/src/styles.css
@@ -99,14 +99,6 @@ header .logo h2 {
   background-color: #C7BEBE;
   overflow: hidden;
   margin: 30px 20px;
-  box-shadow: 0 1px 3px gray;
-  transform: translateY(0px);
-  transition: transform 0.5s ease-out;
-}
-#plats .single-plat:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 2px 5px gray;
-  transition: box-shadow, transform 0.5s ease-out;
 }
 #plats .single-plat .plat-image {
   width: 100%;
@@ -185,6 +177,7 @@ header .logo h2 {
 }
 #nomatch p {
   color: gray;
+  text-align: center;
 }
 
 #selected-filter {
