--- a/src/styles.sass
+++ b/src/styles.sass
@@ -90,13 +90,6 @@ header .logo h2
         background-color: #C7BEBE
         overflow: hidden
         margin: 30px 20px
-        box-shadow: 0 1px 3px gray
-        transform: translateY(0px)
-        transition: transform 0.5s ease-out
-        &:hover
-            transform: translateY(-5px)
-            box-shadow: 0 2px 5px gray
-            transition: box-shadow, transform 0.5s ease-out
 
     .single-plat .plat-image
         width: 100%
@@ -169,6 +162,7 @@ header .logo h2
         fill: gray
     p
         color: gray
+        text-align: center
 
 #selected-filter
     padding: 10px 100px
